[tool.poetry]
name = "queues"
version = "0.1.0"
description = ""
authors = ["KuligKamil <kamil.marek.kulig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "3.6.1"
click = "8.1.3"
fastapi = "0.79.0"
h11 = "0.13.0"
httptools = "0.4.0"
idna = "3.3"
pydantic = "1.9.1"
python-dotenv = "0.20.0"
PyYAML = "6.0"
sniffio = "1.2.0"
starlette = "0.19.1"
typing-extensions = "4.3.0"
uvicorn = "0.18.2"
uvloop = "0.16.0"
watchfiles = "0.16.1"
websockets = "10.3"
aiofiles = "^0.8.0"
celery = "^5.2.7"
flower = "^1.2.0"
Jinja2 = "^3.1.2"
pytest = "^7.1.2"
redis = "^4.3.4"
requests = "^2.28.1"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
